--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "node-schedule": "^2.0.0",
     "rcon-client": "^4.2.3",
-    "systeminformation": "^5.6.10"
+    "systeminformation": "^5.6.10",
+    "uuid": "^8.3.2"
   }
 }
