--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "klaw-sync": "^6.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "nbt-ts": "^1.3.4",
     "node-schedule": "^2.0.0",
     "rcon-client": "^4.2.3",
     "systeminformation": "^5.6.10",
