--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/fs-extra": "^9.0.11",
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.13",
+    "chokidar": "^3.5.3",
     "cpu": "^1.0.1",
     "fs-extra": "^9.1.0",
     "klaw-sync": "^6.0.0",
@@ -17,5 +15,11 @@
     "rcon-client": "^4.2.3",
     "systeminformation": "^5.6.10",
     "uuid": "^8.3.2"
-  }
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.11",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^17.0.13"
+  },
+  "packageManager": "yarn@3.2.1"
 }
