--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.1",
     "nbt-ts": "^1.3.4",
     "node-schedule": "^2.0.0",
+    "pako": "^2.0.4",
     "rcon-client": "^4.2.3",
     "systeminformation": "^5.6.10",
     "uuid": "^8.3.2"
@@ -19,7 +20,8 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.11",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.13"
+    "@types/node": "^17.0.13",
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.2.1"
 }
