--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@achrinza/node-ipc": "^10.1.6",
+    "@colors/colors": "^1.5.0",
+    "@types/node-ipc": "^9.2.0",
     "chokidar": "^3.5.3",
     "cpu": "^1.0.1",
     "fs-extra": "^9.1.0",
