--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "@types/node": "^17.0.13",
     "typescript": "^4.7.4"
   },
-  "packageManager": "yarn@4.0.0-rc.13"
+  "packageManager": "yarn@3.2.2"
 }
