--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chokidar": "^3.5.3",
     "cpu": "^1.0.1",
     "fs-extra": "^9.1.0",
+    "iconv-lite": "^0.6.3",
     "klaw-sync": "^6.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
