--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@achrinza/node-ipc": "^10.1.6",
-    "@colors/colors": "^1.5.0",
+    "@achrinza/node-ipc": "^10.1.9",
+    "@colors/colors": "^1.6.0",
     "@types/node-ipc": "^9.2.0",
-    "chokidar": "^3.5.3",
-    "fs-extra": "^9.1.0",
+    "@types/node-schedule": "^2.1.0",
+    "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
     "klaw": "^4.1.0",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
-    "nbt-ts": "^1.3.4",
-    "node-schedule": "^2.0.0",
-    "pako": "^2.0.4",
-    "rcon-client": "^4.2.3",
+    "nbt-ts": "^1.3.5",
+    "node-schedule": "^2.1.1",
     "systeminformation": "^5.18.7",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.11",
     "@types/lodash": "^4.14.178",
+    "@types/luxon": "^3.3.1",
     "@types/node": "^17.0.13",
-    "typescript": "^4.7.4"
+    "typescript": "^5.1.6"
   },
   "packageManager": "yarn@3.6.1"
 }
